# ic-dump-gradespec

./: .gitignore  README.md
ArvoreBinaria/: ArvoreBinaria.cabal  CHANGELOG.md
ArvoreBinaria/app/: Main.hs
ArvoreBinaria/src/ArvoreBinaria/: Arvore.hs
ArvoreBinaria/test/: Main.hs
Huffman/: Huffman.cabal
Huffman/app/: Main.hs
Huffman/src/: Huffman.hs
Huffman/test/: Spec.hs
Huffman/textos/: a-cartomante.txt  a-hora-da-estrela.txt  memorias-postumas.txt  o-alienista.txt
app-validation/: CHANGELOG.md  app-validation.cabal
app-validation/app/: Main.lhs
app-validation/src/Form/: Console.lhs  Validation.lhs
app-validation/test/: Main.lhs
