cabal-version:      >=1.10
name:               Huffman
version:            0.1.0.0
build-type:         Simple

library
    exposed-modules:
        Huffman

    hs-source-dirs:
        src

    build-depends:
        base >=4.14 && <5,
        containers

    default-language:
        Haskell2010

executable Huffman
    main-is:
        Main.hs

    hs-source-dirs:
        app

    build-depends:
        base,
        containers,
        filepath,
        directory,
        Huffman

    default-language:
        Haskell2010

test-suite tests
    type:
        exitcode-stdio-1.0

    main-is:
        Spec.hs

    hs-source-dirs:
        test

    build-depends:
        base,
        containers,
        tasty,
        tasty-hunit,
        Huffman

    default-language:
        Haskell2010